# keychain

./: Backup.hs  Main.hs  keychain.cabal  stack.yaml
src/: Keychain.hs  Main.hs
src/Keychain/: Core.hs  Main.hs  Operations.hs
test/: Spec.hs
