name:                keychain
version:             0.1.0.0
synopsis:            A program to keep passwords encrypted
homepage:            https://github.com/patriknygren82/keychain#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Nygren
maintainer:          patriknygren82@gmail.com
copyright:           2018 Patrik Nygren
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable keychain
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5 ,
                       bytestring >= 0.10 ,
                       text ,
                       directory ,
                       filepath ,
                       Hclip ,
                       crypto-simple ,
                       transformers