name:                keychain
version:             0.1.0.0
synopsis:            A program to keep passwords encrypted
homepage:            https://github.com/patriknygren82/keychain#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Nygren
maintainer:          patriknygren82@gmail.com
copyright:           2018 Patrik Nygren
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  exposed-modules:   Keychain
                     Keychain.Core
                     Keychain.Operations
                     Keychain.Main

  build-depends:     base >= 4.7 && < 5 ,
                     bifunctors ,
                     bytestring >= 0.10 ,
                     yaml ,
                     text ,
                     directory ,
                     filepath ,
                     Hclip ,
                     crypto-simple ,
                     transformers ,
                     unordered-containers

executable keychain
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5 ,
                     keychain